--- a/coupang/css/index.css
+++ b/coupang/css/index.css
@@ -64,6 +64,7 @@ section{
 .buy-btn:hover{
     display: block;
     background-color: #0074E9;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     inline-size: 112px;
     block-size: 42px;
 }
@@ -78,5 +79,5 @@ section{
 
 .buy-btn:hover::before{
     opacity: 1;
-    font-size: 15px;
+    font-size: 13px;
 }
